# lab-4-yatsanf-1

./: CMakeLists.txt
src/include/: FileHandle.hpp  ResourceError.hpp  ResourceManager.hpp
src/resource_core/: CMakeLists.txt  FileHandle.cpp  ResourceError.cpp  ResourceError.h  ResourceManager.cpp  ResourceManager.h
tests/: tests.cpp
